--- a/index.html
+++ b/index.html
@@ -8,44 +8,54 @@
   body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     transition: background 1s, color 1s;
   }
 
   .container {
     width: 100%;
     max-width: 500px;
-    padding: 20px;
-    margin: auto;
+    padding: 30px;
+    margin: 50px auto;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 15px;
+    background-color: rgba(0,0,0,0.5);
+    box-shadow: 0 8px 20px rgba(0,0,0,0.4);
   }
 
   h1 {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
+    font-size: 2rem;
+    color: #ff4d4d;
+    text-shadow: 1px 1px 3px #000;
   }
 
   .screen { display: none; }
   .screen.active { display: block; }
 
   .boton {
-    padding: 10px 20px;
-    margin: 5px;
+    padding: 12px 25px;
+    margin: 10px;
     border: none;
-    border-radius: 5px;
+    border-radius: 8px;
     cursor: pointer;
     font-size: 16px;
     font-weight: bold;
+    transition: 0.3s;
+    color: #fff;
   }
+
+  .boton:hover { transform: scale(1.05); }
 
   .input-text {
     width: calc(100% - 22px);
     padding: 10px;
-    margin: 5px 0;
-    border-radius: 4px;
+    margin: 8px 0;
+    border-radius: 5px;
     border: none;
     font-size: 16px;
   }
@@ -59,9 +69,9 @@
   }
 
   .jugador {
-    padding: 10px;
+    padding: 12px;
     background-color: #1e1e2e;
-    border-radius: 5px;
+    border-radius: 8px;
     cursor: pointer;
     text-align: center;
     transition: all 0.3s;
@@ -77,20 +87,34 @@
 
   /* Temas */
   body.tema-claro { background: #f5f5f5; color: #000; }
+  body.tema-claro .container { background: rgba(255,255,255,0.8); }
   body.tema-claro .jugador { background: #ddd; color: #000; }
   body.tema-claro .jugador:hover { background: #ccc; }
+
   body.tema-oscuro { background: #121212; color: #fff; }
+  body.tema-oscuro .container { background: rgba(0,0,0,0.5); }
   body.tema-oscuro .jugador { background: #1e1e2e; color: #fff; }
   body.tema-oscuro .jugador:hover { background: #2a2a3d; }
-  body.tema-colorido { animation: colores 10s infinite alternate; color: #fff; }
-  body.tema-colorido .jugador { background-color: rgba(255,255,255,0.2); }
-  @keyframes colores {
-    0% { background-color: #ff4d4d; }
-    25% { background-color: #4dff4d; }
-    50% { background-color: #4d4dff; }
-    75% { background-color: #ff4dff; }
-    100% { background-color: #ffd24d; }
+
+  body.tema-colorido {
+    animation: gradient 15s ease infinite;
+    color: #fff;
   }
+  body.tema-colorido .container { background: rgba(255,255,255,0.1); }
+  body.tema-colorido .jugador { background-color: rgba(255,255,255,0.2); }
+
+  @keyframes gradient {
+    0% { background: linear-gradient(120deg,#ff4d4d,#4d4dff); }
+    25% { background: linear-gradient(120deg,#4dff4d,#ff4dff); }
+    50% { background: linear-gradient(120deg,#ffdd4d,#4d4dff); }
+    75% { background: linear-gradient(120deg,#4dffdd,#ff4d4d); }
+    100% { background: linear-gradient(120deg,#ff4d4d,#4d4dff); }
+  }
+
+  /* Mejor estilo select y botones en pantalla inicial */
+  #screen-config select { padding: 10px 15px; border-radius: 8px; border: none; font-weight: bold; }
+  #screen-config .boton { background-color: #ff4d4d; }
+  #screen-config .boton:hover { background-color: #e04343; }
 </style>
 </head>
 <body class="tema-oscuro">
@@ -98,18 +122,17 @@
 <div class="container">
 <h1>Juego del Impostor</h1>
 
-<!-- Pantalla tema y categoría -->
+<!-- Pantalla inicial configuración -->
 <div id="screen-config" class="screen active">
   <h2>Configuración del Juego</h2>
-
-  <label for="tema">Elegí un tema:</label>
+  <label for="tema">Tema:</label>
   <select id="tema" onchange="cambiarTema()">
     <option value="oscuro">Oscuro</option>
     <option value="claro">Claro</option>
     <option value="colorido">Colorido</option>
   </select>
 
-  <label for="numImpostores">Cantidad de impostores:</label>
+  <label for="numImpostores">Impostores:</label>
   <select id="numImpostores">
     <option value="1">1 impostor</option>
     <option value="2">2 impostores</option>
@@ -141,7 +164,7 @@ const palabras = {
   animales:["perro","gato","elefante","jirafa","leon","tigre","cebra","lobo","mono","raton","oso","pajaro","tortuga","delfin","vaca","cerdo","conejo","caballo","serpiente","canguro"],
   colores:["rojo","azul","verde","amarillo","negro","blanco","morado","naranja","rosa","celeste","violeta","lila","beige","gris","turquesa","dorado","plateado","fucsia","cyan","magenta"],
   objetos:["pelota","silla","mesa","lapiz","telefono","libro","reloj","computadora","lampara","mochila","sombrero","bateria","cuaderno","bolsa","taza","cuchara","tenedor","cuchillo","espejo","ventilador"],
-  lugares:["playa","escuela","parque","ciudad","casa","montaña","bosque","rio","lago","ciudadela","pueblo","país","continente","isla","desierto","valle","caverna","selva","catedral","biblioteca"]
+  lugares:["playa","escuela","parque","ciudad","casa","montaña","bosque","rio","lago","ciudadela","pueblo","pais","continente","isla","desierto","valle","caverna","selva","catedral","biblioteca"]
 };
 
 let jugadores = [];
@@ -149,7 +172,7 @@ let asignaciones = {};
 let categoriaSeleccionada = null;
 let numImpostores = 1;
 
-function cambiarTema() {
+function cambiarTema(){
   const tema = document.getElementById("tema").value;
   document.body.className = "";
   if(tema==="claro") document.body.classList.add("tema-claro");
@@ -157,26 +180,25 @@ function cambiarTema() {
   else document.body.classList.add("tema-colorido");
 }
 
-function goToPlayers() {
+function goToPlayers(){
   numImpostores = parseInt(document.getElementById("numImpostores").value);
-  // Elegir categoría aleatoria sin mostrarla
   const keys = Object.keys(palabras);
-  categoriaSeleccionada = keys[Math.floor(Math.random()*keys.length)];
+  categoriaSeleccionada = keys[Math.floor(Math.random()*keys.length)]; // no mostrar
   document.getElementById("screen-config").classList.remove("active");
   document.getElementById("screen-jugadores").classList.add("active");
 }
 
-function agregarJugador() {
+function agregarJugador(){
   const input = document.getElementById("input-nombre");
   let nombre = input.value.trim();
-  if(!nombre) { alert("Nombre inválido."); return; }
-  if(jugadores.includes(nombre)) { alert("Ese nombre ya fue agregado."); return; }
+  if(!nombre){ alert("Nombre inválido."); return; }
+  if(jugadores.includes(nombre)){ alert("Ese nombre ya fue agregado."); return; }
   jugadores.push(nombre);
   input.value = "";
   renderJugadores();
 }
 
-function renderJugadores() {
+function renderJugadores(){
   const lista = document.getElementById("lista-jugadores");
   lista.innerHTML = "";
   jugadores.forEach(n=>{
@@ -187,8 +209,8 @@ function renderJugadores() {
   });
 }
 
-function empezarJuego() {
-  if(jugadores.length < 3) { alert("Se necesitan al menos 3 jugadores."); return; }
+function empezarJuego(){
+  if(jugadores.length < 3){ alert("Se necesitan al menos 3 jugadores."); return; }
 
   // Elegir impostores
   const impostoresIndices = [];
@@ -197,7 +219,7 @@ function empezarJuego() {
     if(!impostoresIndices.includes(idx)) impostoresIndices.push(idx);
   }
 
-  // Elegir palabra común
+  // Palabra común para todos los jugadores que no son impostores
   const listaPalabras = palabras[categoriaSeleccionada];
   const palabraComun = listaPalabras[Math.floor(Math.random()*listaPalabras.length)];
 
@@ -206,18 +228,10 @@ function empezarJuego() {
     else asignaciones[j] = palabraComun;
   });
 
-  // Opción de 1 o 2 jugadores con palabra diferente
-  const diffCount = Math.min(2,jugadores.length - numImpostores);
-  const indices = jugadores.map((_,i)=>i).filter(i=>!impostoresIndices.includes(i));
-  for(let k=0; k<diffCount; k++){
-    const rand = indices.splice(Math.floor(Math.random()*indices.length),1)[0];
-    asignaciones[jugadores[rand]] = listaPalabras[Math.floor(Math.random()*listaPalabras.length)];
-  }
-
   mostrarRevelar();
 }
 
-function mostrarRevelar() {
+function mostrarRevelar(){
   document.getElementById("screen-jugadores").classList.remove("active");
   document.getElementById("screen-revelar").classList.add("active");
   const lista = document.getElementById("lista-revelar");
