--- a/index.html
+++ b/index.html
@@ -15,15 +15,12 @@
   .container {
     width: 100%;
     max-width: 500px;
-    padding: 30px;
-    margin: 50px auto;
+    padding: 20px;
+    margin: 20px auto;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 15px;
-    background-color: rgba(0,0,0,0.5);
-    box-shadow: 0 8px 20px rgba(0,0,0,0.4);
   }
 
   h1 {
@@ -47,9 +44,10 @@
     font-weight: bold;
     transition: 0.3s;
     color: #fff;
+    background-color: #ff4d4d;
   }
 
-  .boton:hover { transform: scale(1.05); }
+  .boton:hover { background-color: #e04343; transform: scale(1.05); }
 
   .input-text {
     width: calc(100% - 22px);
@@ -75,46 +73,39 @@
     cursor: pointer;
     text-align: center;
     transition: all 0.3s;
+    color: #fff;
   }
 
   .jugador:hover { background-color: #2a2a3d; }
   .revelado { font-weight: bold; color: #ffd700; background-color: #33334d !important; }
 
-  select, label {
-    margin: 5px 0;
-    font-size: 16px;
-  }
+  select, label { margin: 5px 0; font-size: 16px; }
 
   /* Temas */
   body.tema-claro { background: #f5f5f5; color: #000; }
-  body.tema-claro .container { background: rgba(255,255,255,0.8); }
   body.tema-claro .jugador { background: #ddd; color: #000; }
   body.tema-claro .jugador:hover { background: #ccc; }
 
   body.tema-oscuro { background: #121212; color: #fff; }
-  body.tema-oscuro .container { background: rgba(0,0,0,0.5); }
   body.tema-oscuro .jugador { background: #1e1e2e; color: #fff; }
   body.tema-oscuro .jugador:hover { background: #2a2a3d; }
 
   body.tema-colorido {
-    animation: gradient 15s ease infinite;
+    background: linear-gradient(120deg,#ff4d4d,#4dff4d,#4d4dff,#ffdd4d);
+    background-size: 800% 800%;
+    animation: gradientAnim 30s ease infinite;
     color: #fff;
   }
-  body.tema-colorido .container { background: rgba(255,255,255,0.1); }
   body.tema-colorido .jugador { background-color: rgba(255,255,255,0.2); }
 
-  @keyframes gradient {
-    0% { background: linear-gradient(120deg,#ff4d4d,#4d4dff); }
-    25% { background: linear-gradient(120deg,#4dff4d,#ff4dff); }
-    50% { background: linear-gradient(120deg,#ffdd4d,#4d4dff); }
-    75% { background: linear-gradient(120deg,#4dffdd,#ff4d4d); }
-    100% { background: linear-gradient(120deg,#ff4d4d,#4d4dff); }
+  @keyframes gradientAnim {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
   }
 
-  /* Mejor estilo select y botones en pantalla inicial */
+  /* Select y botones en pantalla inicial */
   #screen-config select { padding: 10px 15px; border-radius: 8px; border: none; font-weight: bold; }
-  #screen-config .boton { background-color: #ff4d4d; }
-  #screen-config .boton:hover { background-color: #e04343; }
 </style>
 </head>
 <body class="tema-oscuro">
@@ -125,6 +116,7 @@
 <!-- Pantalla inicial configuración -->
 <div id="screen-config" class="screen active">
   <h2>Configuración del Juego</h2>
+
   <label for="tema">Tema:</label>
   <select id="tema" onchange="cambiarTema()">
     <option value="oscuro">Oscuro</option>
@@ -158,6 +150,7 @@
   <button class="boton" onclick="resetear()">Reiniciar</button>
 </div>
 
+
 <script>
 const palabras = {
   frutas:["manzana","banana","pera","naranja","uva","sandia","melon","kiwi","durazno","cereza","pomelo","limon","mandarina","frutilla","anona","mango","papaya","higo","grosella","arandano"],
@@ -183,7 +176,7 @@ function cambiarTema(){
 function goToPlayers(){
   numImpostores = parseInt(document.getElementById("numImpostores").value);
   const keys = Object.keys(palabras);
-  categoriaSeleccionada = keys[Math.floor(Math.random()*keys.length)]; // no mostrar
+  categoriaSeleccionada = keys[Math.floor(Math.random()*keys.length)]; // aleatoria, no mostrar
   document.getElementById("screen-config").classList.remove("active");
   document.getElementById("screen-jugadores").classList.add("active");
 }
@@ -219,7 +212,7 @@ function empezarJuego(){
     if(!impostoresIndices.includes(idx)) impostoresIndices.push(idx);
   }
 
-  // Palabra común para todos los jugadores que no son impostores
+  // Palabra común
   const listaPalabras = palabras[categoriaSeleccionada];
   const palabraComun = listaPalabras[Math.floor(Math.random()*listaPalabras.length)];
 
